--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "axios": "^1.7.5",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "json-server": "^1.0.0-beta.2",
     "normalize.css": "^8.0.1",
     "path": "^0.12.7",
     "react": "^18.3.1",
