--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@tanstack/react-query": "^5.52.3",
     "axios": "^1.7.5",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
